fix warnings update JNA library